== VERSION HISTORY ==

x.x

1.1 (10/02/2012):
 - added option to show featured groups on personal listing pages

1.0 (10/02/2012):
 - initial release