@@ -11,10 +11,13 @@ require_once 'lib/hooks.php';
 elgg_register_event_handler('init', 'system', 'au_subgroups_init');
 
 // after group creation or editing we need to check the permissions
-elgg_register_event_handler('create', 'group', 'au_subgroups_group_permissions');
-elgg_register_event_handler('update', 'group', 'au_subgroups_group_permissions');
+elgg_register_event_handler('update', 'group', 'au_subgroups_group_visibility');
 elgg_register_event_handler('create', 'member', 'au_subgroups_join_group');
 elgg_register_event_handler('leave', 'group', 'au_subgroups_leave_group');
+// break up the create/update events to be more manageable
+elgg_register_event_handler('create', 'group', 'au_subgroups_add_parent');
+elgg_register_event_handler('create', 'group', 'au_subgroups_clone_layout_on_create');
+elgg_register_event_handler('create', 'group', 'au_subgroups_group_visibility');
 
 function au_subgroups_init() {
   // add in our own css
